add get bulk data lot id
